[gd_scene load_steps=13 format=3 uid="uid://ca8vm3imm3viv"]

[ext_resource type="Script" uid="uid://cq8qqhlpfdarg" path="res://scenes/buildings/stonecutter.gd" id="1_seoxe"]
[ext_resource type="Texture2D" uid="uid://c07217j216ntx" path="res://assets/art/atlas/Sprites.png" id="2_0t4dn"]
[ext_resource type="Texture2D" uid="uid://ehbqgvofqqqr" path="res://assets/art/atlas/UI.png" id="3_yh06f"]
[ext_resource type="FontFile" uid="uid://b475o4l7b5n10" path="res://assets/fonts/Pixellari.ttf" id="4_66py8"]
[ext_resource type="Script" uid="uid://cbs343k5fqkh" path="res://scenes/buildings/res_label.gd" id="5_d66ij"]

[sub_resource type="AtlasTexture" id="AtlasTexture_seoxe"]
atlas = ExtResource("2_0t4dn")
region = Rect2(624, 192, 64, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8jy3"]
size = Vector2(49, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_rubx5"]
atlas = ExtResource("3_yh06f")
region = Rect2(240, 0, 80, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xd1yv"]
texture = SubResource("AtlasTexture_rubx5")

[sub_resource type="AtlasTexture" id="AtlasTexture_w8jy3"]
atlas = ExtResource("3_yh06f")
region = Rect2(320, 0, 80, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fb2vg"]
texture = SubResource("AtlasTexture_w8jy3")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 80, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_seoxe"]
radius = 131.01526

[node name="Stonecutter" type="StaticBody2D"]
script = ExtResource("1_seoxe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_seoxe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 11.5)
shape = SubResource("RectangleShape2D_w8jy3")

[node name="ProdBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -40.0
offset_top = -53.0
offset_right = 40.0
offset_bottom = -37.0
theme_override_styles/background = SubResource("StyleBoxTexture_xd1yv")
theme_override_styles/fill = SubResource("StyleBoxTexture_fb2vg")
show_percentage = false

[node name="ResLabel" type="RichTextLabel" parent="."]
z_index = 2
offset_left = -25.0
offset_top = -68.0
offset_right = 25.0
offset_bottom = -38.0
theme_override_fonts/normal_font = ExtResource("4_66py8")
bbcode_enabled = true
text = "[img]res://assets/art/icons/IconStone.png[/img] +1"
horizontal_alignment = 1
script = ExtResource("5_d66ij")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 11.5)
shape = SubResource("RectangleShape2D_w8jy3")

[node name="FarmArea" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 20
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FarmArea"]
shape = SubResource("CircleShape2D_seoxe")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="FarmArea" to="." method="_on_farm_area_area_entered"]
[connection signal="area_exited" from="FarmArea" to="." method="_on_farm_area_area_exited"]
